--- a/Index3.html
+++ b/Index3.html
@@ -77,49 +77,56 @@
     <!-- Latest Work starts here -->
 
     <section class="container mt-5">
-        <div class="row pt-5">
-            <div class="col-md-5 col-lg-5">
-                <div class="mb-5">
-                    <h5 class="font-weight-bold">
-                        Latest Works<span class="px-4"><img class="px-4  latest-img img-fluid" src="./index3-img/Line 1.png" alt=""></span></h5>
-                </div>
+        <div class="col-reverse">
+            <h5 class="mobile-latest font-weight-bold">Latest Works</h5>
 
-                <div class="pt-5">
-                    <p class="">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Laoreet habitant facilisis sapien massa duis. Consequat, vitae elit pellentesque fringilla. Non a, neque vitae dictum arcu.</p>
-                </div>
-            </div>
-
-            <div class="col-md-1 col-lg-1">
-                <div class="rectangle">
-                    <p class="text-center py-3 mx-2 my-4">Debby Linchen</p>
-                </div>
-
-            </div>
-            <div class="col-md-6 col-lg-6">
-                <img class="img-fluid" src="./index3-img/Ryan Dubik.png   " alt="Ryan Dubik">
-                <hr class="border-orange">
-
-                <div class="row font-weight-bold">
-                    <div class="col">
-                        <p>Ryan Dubik</p>
+            <div class="row pt-5">
+                <div class="col-md-5 col-lg-5">
+                    <div class="mb-5">
+                        <h5 class="font-weight-bold desktop-latest">
+                            Latest Works<span class="px-4"><img class="px-4  latest-img img-fluid" src="./index3-img/Line 1.png" alt=""></span></h5>
                     </div>
-                    <div class="col">
-                        <p class="float-right"> 13 June, 2020</p>
+
+                    <div class="latest-works">
+                        <p class="">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Laoreet habitant facilisis sapien massa duis. Consequat, vitae elit pellentesque fringilla. Non a, neque vitae dictum arcu.</p>
                     </div>
                 </div>
+
+                <div class="col-md-1 col-lg-1">
+                    <div class="rectangle">
+                        <p class="text-center py-3 mx-2 my-4">Debby Linchen</p>
+                    </div>
+
+                </div>
+                <div class="col-md-6 col-lg-6 ">
+                    <img class="ryan-img" src="./index3-img/Ryan Dubik.png   " alt="Ryan Dubik">
+                    <hr class="border-orange">
+
+                    <div class="row font-weight-bold">
+                        <div class="col ryan">
+                            <p>Ryan Dubik</p>
+                        </div>
+
+                        <div class="col">
+                            <p class="float-right"> 13 June, 2020</p>
+                        </div>
+                    </div>
+                </div>
             </div>
+
+        </div>
         </div>
 
         <div class="row pt-5">
             <div class="col-md-6 col-lg-6">
-                <img class="img-fluid" src="./index3-img/Emily.png " alt="Emily">
+                <img class="emily-img" src="./index3-img/Emily.png " alt="Emily">
                 <hr class="border-orange">
 
-                <div class="row font-weight-bold">
-                    <div class="col">
-                        <p>Ryan Dubik</p>
+                <div class="row  font-weight-bold">
+                    <div class="col ">
+                        <p class="">Ryan Dubik</p>
                     </div>
-                    <div class="col">
+                    <div class="col row-sm-12">
                         <p class="float-right"> 13 June, 2020</p>
                     </div>
                 </div>
@@ -136,7 +143,6 @@
                     <p class="pt-5">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Laoreet habitant facilisis sapien massa duis. Consequat, vitae elit pellentesque fringilla. Non a, neque vitae dictum arcu.</p>
                 </div>
             </div>
-        </div>
 
     </section>
 
@@ -172,18 +178,24 @@
     <!-- Sessions here` -->
     <section class="container mt-5">
         <div class="row pt-5">
-            <div class="col-md-6 col-lg-6 ">
-                <div><img class="img-fluid" src="./index3-img/serices-img.png" alt=""><span></span></div>
-            </div>
 
-            <div class="col-md-6  col-lg-6">
+            <div class="col-md-6 col-lg-6 ">
+                <div class="row">
+                    <div><img class="img-fluid" src="./index3-img/session.png" alt=""><span></span></div>
+
+                </div>
+            </div>
+            <div class="col-md-1 col-lg-1"></div>
+
+
+            <div class="col-md-5 col-lg-5">
                 <hr class="border-orange">
                 <div class="mx-5">
                     <div>
                         <h5 class="font-weight-bold mb-3">Sessions</h5>
                     </div>
                     <div>
-                        <p class="">
+                        <p class="pt-3">
                             Lorem ipsum dolor sit amet, consectetur adipiscing elit. Laoreet habitant facilisis sapien massa duis. Consequat, vitae elit pellentesque fringilla. Non a, neque vitae dictum arcu.
                         </p>
                     </div>
@@ -195,8 +207,12 @@
 
     <!-- GAllery Beins here -->
     <section class="mt-5 pt-5">
+        <div class="container">
+            <h5 class="font-weight-bold mb-3">Gallery</h5>
+        </div>
         <div class="gallery-head">
             <div class="container">
+
                 <div class="row pt-4 pb-4">
 
                     <img src="./index3-img/i1.png" class="img-fluid" alt="">
@@ -333,12 +349,13 @@
         <button type="button" class="btn btn-outline-secondary btn-lg px-5 mb-5">Submit</button>
     </section>
 
-    <section class="mt-5 pt-5">
-        <div class="foot">
+    <!-- Footer here` -->
+    <section class="mt-5 foot pt-5">
+        <div class="">
             <footer>
-                <div class="container ">
+                <div class="container pt-5 pb-5">
                     <div class="row foot-head">
-                        <div class="col-md-3 mx-3 col-6">
+                        <div class="col-md-3 mx-3 col-4">
                             <div class="head-caption">
                                 Fotografas
                             </div>
@@ -350,7 +367,7 @@
                             </div>
                         </div>
 
-                        <div class="col-md-3 mx-3 col-6">
+                        <div class="col-md-3 mx-3 col-4">
                             <div class="head-caption">
                                 About Us
                             </div>
@@ -375,9 +392,29 @@
                     </div>
                 </div>
             </footer>
-            gg
+            <!-- <div class="inner col-3">
+
+                <div class="container ml-5 p-2">
+                    <div class="row ml-5">
+                        <img class="mx-3 img-fluid" src="./index3-img/twitter.png" alt="">
+                        <img class="mx-3 img-fluid" src="./index3-img/instagram.png" alt="">
+                        <img class="mx-3 img-fluid" src="./index3-img/facebook.png" alt="">
+                    </div>
+                </div>
+            </div> -->
         </div>
 
+        <!-- <section class="container-fluid ">
+            <div class="bg-white  container">
+                <div class="">
+                    <div class="pl-5 inner-foot col-md-4 col-lg-4">
+                        <img class="mx-3 img-fluid" src="./index3-img/twitter.png" alt="">
+                        <img class="mx-3 img-fluid" src="./index3-img/instagram.png" alt="">
+                        <img class="mx-3 img-fluid" src="./index3-img/facebook.png" alt="">
+                    </div>
+                </div>c
+            </div>
+        </section> -->
     </section>
 </body>
 
