--- a/Index3.html
+++ b/Index3.html
@@ -139,8 +139,8 @@
             </div>
 
             <div class="col-md-5 col-lg-5">
-                <div class="pt-5">
-                    <p class="pt-5">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Laoreet habitant facilisis sapien massa duis. Consequat, vitae elit pellentesque fringilla. Non a, neque vitae dictum arcu.</p>
+                <div class="pt-5 emily-text">
+                    <p class="">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Laoreet habitant facilisis sapien massa duis. Consequat, vitae elit pellentesque fringilla. Non a, neque vitae dictum arcu.</p>
                 </div>
             </div>
 
@@ -149,28 +149,31 @@
     <!-- Services starts here -->
 
     <section class="container mt-5">
-        <div class=" row pt-5">
-            <div class="col-md-4 col-lg-4">
-                <hr class="border-orange mb-3">
-                <div class="mb-3">
-                    <h5 class="font-weight-bold">Services</h5>
+        <div class="col-reverse">
+            <h5 class="mobile-latest font-weight-bold pb-2">Services</h5>
+            <div class=" row pt-5">
+                <div class="col-md-4 col-lg-4">
+                    <hr class="border-orange-services mb-3">
+                    <div class="mb-3">
+                        <h5 class="font-weight-bold desktop-latest">Services</h5>
+                    </div>
+                    <div class="lorem">
+                        <ul class="p-3 ">
+                            <li>Lorem ipsum dolor sit amet,</li>
+                            <li>Lorem ipsum dolor sit amet,</li>
+                            <li>Lorem ipsum dolor sit amet,</li>
+                            <li>Lorem ipsum dolor sit amet,</li>
+                        </ul>
+                    </div>
+
+                    <button type="button" class="btn btn-outline-secondary btn-lg px-5 ">See More</button>
                 </div>
-                <div class="lorem">
-                    <ul class="p-3 ">
-                        <li>Lorem ipsum dolor sit amet,</li>
-                        <li>Lorem ipsum dolor sit amet,</li>
-                        <li>Lorem ipsum dolor sit amet,</li>
-                        <li>Lorem ipsum dolor sit amet,</li>
-                    </ul>
+
+                <div class="col-1"></div>
+
+                <div class="col-md-7 col-lg-7 ">
+                    <div><img class="img-fluid" src="./index3-img/serices-img.png" alt=""></div>
                 </div>
-
-                <button type="button" class="btn btn-outline-secondary btn-lg px-5 mb-5">See More</button>
-            </div>
-
-            <div class="col-1"></div>
-
-            <div class="col-md-7 col-lg-7 ">
-                <div><img class="img-fluid" src="./index3-img/serices-img.png" alt=""></div>
             </div>
         </div>
     </section>
@@ -180,26 +183,27 @@
         <div class="row pt-5">
 
             <div class="col-md-6 col-lg-6 ">
-                <div class="row">
-                    <div><img class="img-fluid" src="./index3-img/session.png" alt=""><span></span></div>
+                <h5 class="mobile-latest font-weight-bold pb-5 float-right">Sessions</h5>
+                <div><img class="img-fluid" src="./index3-img/session.png" alt=""><span></span></div>
 
-                </div>
+
             </div>
             <div class="col-md-1 col-lg-1"></div>
 
 
             <div class="col-md-5 col-lg-5">
-                <hr class="border-orange">
+                <hr class="border-orange-services">
                 <div class="mx-5">
                     <div>
-                        <h5 class="font-weight-bold mb-3">Sessions</h5>
+                        <h5 class="font-weight-bold desktop-latest">Sessions</h5>
+
                     </div>
                     <div>
                         <p class="pt-3">
                             Lorem ipsum dolor sit amet, consectetur adipiscing elit. Laoreet habitant facilisis sapien massa duis. Consequat, vitae elit pellentesque fringilla. Non a, neque vitae dictum arcu.
                         </p>
                     </div>
-                    <button type="button" class="btn btn-outline-secondary btn-lg px-5 mb-5">Watch More</button>
+                    <button type="button" class="btn btn-outline-secondary btn-lg px-5 ">Watch More</button>
                 </div>
             </div>
         </div>
