--- a/Index3.html
+++ b/Index3.html
@@ -193,7 +193,7 @@
 
             <div class="col-md-5 col-lg-5">
                 <hr class="border-orange-services">
-                <div class="mx-5">
+                <div class="sessions-pad">
                     <div>
                         <h5 class="font-weight-bold desktop-latest">Sessions</h5>
 
