--- a/Index3.html
+++ b/Index3.html
@@ -217,7 +217,7 @@
         <div class="gallery-head">
             <div class="container">
 
-                <div class="row pt-4 pb-4">
+                <div class="row pt-4 img-fluids pb-4">
 
                     <img src="./index3-img/i1.png" class="img-fluid" alt="">
                     <img src="./index3-img/i2.png" class="img-fluid" alt="">
@@ -240,6 +240,9 @@
                     <img src="./index3-img/i19.png" class="img-fluid" alt="">
                     <img src="./index3-img/i20.png" class="img-fluid" alt="">
                     <img src="./index3-img/i21.png" class="img-fluid" alt="">
+                    <img src="./index3-img/i22.png" class="img-fluid" alt="">
+                    <img src="./index3-img/i23.png" class="img-fluid" alt="">
+                    <img src="./index3-img/i24.png" class="img-fluid" alt="">
 
                 </div>
             </div>
