--- a/Index3.html
+++ b/Index3.html
@@ -41,16 +41,16 @@
                             <a class="nav-link mx-3" href="#">Home <span class="sr-only">(current)</span></a>
                         </li>
                         <li class="nav-item active">
-                            <a class="nav-link mx-3" href="#">Gallery</a>
+                            <a class="nav-link mx-3" href="#gallery">Gallery</a>
                         </li>
                         <li class="nav-item active">
-                            <a class="nav-link mx-3" href="#">About<span class="sr-only">(current)</span></a>
+                            <a class="nav-link mx-3" href="#sessions">About<span class="sr-only">(current)</span></a>
                         </li>
                         <li class="nav-item active">
-                            <a class="nav-link mx-3" href="#"> Contact</a>
+                            <a class="nav-link mx-3" href="#contact"> Contact</a>
                         </li>
                         <li class="nav-item active">
-                            <a class="nav-link mx-3" href="#"> Services</a>
+                            <a class="nav-link mx-3" href="#services"> Services</a>
                         </li>
                     </ul>
 
@@ -60,7 +60,7 @@
     </header>
 
     <!-- Hero here -->
-    <section class="hero">
+    <section class="hero" id="home">
         <div class="container text-light">
             <div class="row">
                 <div class="col-md-6 col-lg-6 col-sm-12">
@@ -76,7 +76,7 @@
 
     <!-- Latest Work starts here -->
 
-    <section class="container mt-5">
+    <section class="container mt-5" id="latest-work">
         <div class="col-reverse">
             <h5 class="mobile-latest font-weight-bold">Latest Works</h5>
 
@@ -148,7 +148,7 @@
 
     <!-- Services starts here -->
 
-    <section class="container mt-5">
+    <section class="container mt-5" id="services">
         <div class="col-reverse">
             <h5 class="mobile-latest font-weight-bold pb-2">Services</h5>
             <div class=" row pt-5">
@@ -179,7 +179,7 @@
     </section>
 
     <!-- Sessions here` -->
-    <section class="container mt-5">
+    <section class="container mt-5" id="sessions">
         <div class="row pt-5">
 
             <div class="col-md-6 col-lg-6 ">
@@ -210,7 +210,7 @@
     </section>
 
     <!-- GAllery Beins here -->
-    <section class="mt-5 pt-5">
+    <section class="mt-5 pt-5 " id="gallery">
         <div class="container">
             <h5 class="font-weight-bold mb-3">Gallery</h5>
         </div>
@@ -253,7 +253,7 @@
 
     <!-- Top photographers -->
 
-    <section class=" container mt-5 pt-5">
+    <section class=" container mt-5 pt-5" id="top-photographers">
         <h5 class="font-weight-bold text-center mb-3">Our Top Photographers </h5>
         <div class="row ">
 
@@ -288,7 +288,7 @@
     </section>
 
     <!-- Contact Us -->
-    <section class="container mt-5 pt-5">
+    <section class="container mt-5 pt-5" id="contact">
         <h5 class="font-weight-bold mb-3">Contact Us </h5>
         <div class="row mt-5">
 
@@ -362,7 +362,7 @@
             <footer>
                 <div class="container pt-5 pb-5">
                     <div class="row foot-head">
-                        <div class="col-md-3 mx-3 col-4">
+                        <div class="col-md-3 mx col-4">
                             <div class="head-caption">
                                 Fotografas
                             </div>
@@ -374,7 +374,7 @@
                             </div>
                         </div>
 
-                        <div class="col-md-3 mx-3 col-4">
+                        <div class="col-md-3 mx col-4">
                             <div class="head-caption">
                                 About Us
                             </div>
@@ -386,7 +386,7 @@
                             </ul>
                         </div>
 
-                        <div class="col-md-3 mx-3 col-6">
+                        <div class="col-md-3 mx col-5">
                             <div class="head-caption">
                                 Get Support
                             </div>
@@ -396,32 +396,31 @@
                                 <li>Ask a Question </li>
                             </ul>
                         </div>
+
+                        <div class="col-md-3 mx col-4">
+                            <div class="head-caption">
+                                Quick Links
+                            </div>
+
+                            <ul class="m-0 p-0">
+                                <li> </li>
+                                <a href="#gallery">
+                                    <li>Gallery </li>
+                                </a>
+                                <a href="#sessions">
+                                    <li>About </li>
+                                </a>
+
+                                <a href="#services">
+                                    <li>Services </li>
+                                </a>
+
+                            </ul>
+                        </div>
                     </div>
                 </div>
             </footer>
-            <!-- <div class="inner col-3">
-
-                <div class="container ml-5 p-2">
-                    <div class="row ml-5">
-                        <img class="mx-3 img-fluid" src="./index3-img/twitter.png" alt="">
-                        <img class="mx-3 img-fluid" src="./index3-img/instagram.png" alt="">
-                        <img class="mx-3 img-fluid" src="./index3-img/facebook.png" alt="">
-                    </div>
-                </div>
-            </div> -->
         </div>
-
-        <!-- <section class="container-fluid ">
-            <div class="bg-white  container">
-                <div class="">
-                    <div class="pl-5 inner-foot col-md-4 col-lg-4">
-                        <img class="mx-3 img-fluid" src="./index3-img/twitter.png" alt="">
-                        <img class="mx-3 img-fluid" src="./index3-img/instagram.png" alt="">
-                        <img class="mx-3 img-fluid" src="./index3-img/facebook.png" alt="">
-                    </div>
-                </div>c
-            </div>
-        </section> -->
     </section>
 </body>
 
