--- a/Index3.html
+++ b/Index3.html
@@ -397,7 +397,7 @@
                             </ul>
                         </div>
 
-                        <div class="col-md-3 mx col-4">
+                        <div class="col-md-3 mx col-4 quick-links">
                             <div class="head-caption">
                                 Quick Links
                             </div>
@@ -422,6 +422,10 @@
             </footer>
         </div>
     </section>
+
+
+
+
 </body>
 
 </html>
