--- a/index.html
+++ b/index.html
@@ -33,6 +33,8 @@
         </div>
     </nav>
     <header style="background-color: #333;">
+    <!-- <header class="header"> -->
+
         <div class="image">
             <img src="images/header-img.png" alt="header">
         </div>
@@ -45,7 +47,7 @@
         </div>
 
     </header>
-    <main>
+    <main class="big-pad">
         <div class="row pad">
             <div class="text-section">
                 <div class="upper-text">
@@ -148,13 +150,16 @@
                 <img src="images/set.png">
             </div>
             <div class="text flex-center ">
-                <p>
+                <div>
+                    <p>
                     Lorem ipsum dolor sit amet, consectetur
                     adipiscing elit. Laoreet habitant facilisis sapien
                     massa duis. Consequat, vitae elit pellentesque
                     fringilla. Non a, neque vitae dictum arcu.
-                </p>
-                <a href="" class="button-outline">Watch More</a>
+                    </p>
+                    <a href="" class="button-outline">Watch More</a>
+                </div>
+                
             </div>
 
         </div>
@@ -220,7 +225,7 @@
                         </div>
                         
                         <div class="input-group">
-                            <label for="message">Message</label>
+                            <label for="message">Your Message</label>
                             <textarea cols="80" rows="10" type="text" required></textarea>
                         </div>
                         <div class="input-submit">
