--- a/index.html
+++ b/index.html
@@ -32,8 +32,8 @@
             </ul>
         </div>
     </nav>
-    <header style="background-color: #333;">
-    <!-- <header class="header"> -->
+    <!-- <header style="background-color: #333;"> -->
+    <div class="header" >
 
         <div class="image">
             <img src="images/header-img.png" alt="header">
@@ -46,9 +46,9 @@
             </div>
         </div>
 
-    </header>
+    </div>
     <main class="big-pad">
-        <div class="row pad">
+        <div class="half pad space ">
             <div class="text-section">
                 <div class="upper-text">
                     <h3>Latest Work</h3>
@@ -86,7 +86,17 @@
             </div>
         </div>
         <!-- This row would be in reverse order -->
-        <div class="row reverse pad">
+        <div class="space reverse half pad">
+            
+            <div class="text-image">
+                <img src="images/girl.png">
+                <div class="image-info">
+                    <p>Ryan Dubik</p>
+                    <p>13 June, 2020    </p>
+                </div>
+
+            </div>
+
             <div class="text-section pad">
                 <div class="upper-text">
                     
@@ -110,14 +120,6 @@
                     </div>
                 </div>
             </div>
-            <div class="text-image">
-                <img src="images/girl.png">
-                <div class="image-info">
-                    <p>Ryan Dubik</p>
-                    <p>13 June, 2020    </p>
-                </div>
-
-            </div>
         </div>
 
         <div class="services half pad">            
@@ -140,11 +142,11 @@
 
             </section>
             <div class="image">
-                <img src="images/camer-use.png">
+                <img src="images/services-use.png">
             </div>
         </div>
 
-        <div class="sessions half">
+        <div class="sessions half pad">
             <div class="image pad">
                 <!-- Add play icon in the center -->
                 <img src="images/set.png">
