--- a/index.html
+++ b/index.html
@@ -6,11 +6,15 @@
     <title>FotoGrafas - Home</title>
     <link rel="stylesheet" href="https://cdn.linearicons.com/free/1.0.0/icon-font.min.css">
     <link rel="stylesheet" href="css/style.css">
+    <script defer src="js/main.js"></script>
 </head>
 <body>
     <nav>
         <div class="logo">
             <img src="images/FotoGrafas.png" alt="logo">
+        </div>
+        <div class="burger">
+           <img src="images/open-menu.png">
         </div>
         <div class="navbar">
             <ul>
@@ -167,7 +171,8 @@
         <div class="sessions half pad">
             <div class="image pad">
                 <!-- Add play icon in the center -->
-                <img class="vanish" src="images/set.png">
+                    <!-- <img class="vanish" src="images/set.png"> -->
+                    <img class="play" src="images/play-icon.png">
             </div>
             <div class="text flex-center">
                 <div>
@@ -187,7 +192,8 @@
         <div class="gallery">
             <h2>Gallery</h2>
             <div class="gallery-images flex-center">
-                <img src="images/GALLERY.png" alt="" srcset="">
+                <!-- <img src="images/GALLERY.png" alt="" srcset=""> -->
+                <div class="image"></div>
             </div>
         </div>
 
